# UWB_IMU_WheelEncoder_Fuse

./: CMakeLists.txt  main.cpp
data_20201208/: wheel_encoder.txt
data_20201224/: 20201224dataset_info.txt  data_Wheel_IMU3.txt
data_all_1/: EKF_ztj.txt  data_UWB_correct1_moveError_test.xlsx  ukf_u4.txt  wheel_encoder.txt
data_all_1/nParticles_1000_xRange_800/: nParticles_1000_xRange_800.txt
data_all_1/nParticles_2000_xRange_2048/: nParticles_2000_xRange_2048.txt
data_all_1/nParticles_300_xRange_2048/: nParticles_300_xRange_2048.txt
data_all_1/nParticles_5000_xRange_2048/: nParticles_5000_xRange_2048.txt
data_all_1/nParticles_500_xRange_800/: nParticles_500_xRange_800.txt
data_test_nParticles/: test.m  test.m~
data_test_nParticles/1/: nParticles_200_data1.txt
include/: Condensation.h  CoreAlgorithm.h  UKF.h  calibrate.h  common_head.h  matrix.h  readData.h  utils.h
likuntoqiyong/include/: common_include.h  load_data.h  paticle_filter.h  run_accumulate_imu.h  run_accumulate_wheel.h  run_calibration.h  run_paticle_filter.h  run_ukf_filter.h  tool_test_show.h  ukf_filter.h
likuntoqiyong/src/: load_data.cpp  main.cpp  paticle_filter.cpp  run_accumulate_imu.cpp  run_accumulate_wheel.cpp  run_calibration.cpp  run_paticle_filter.cpp  run_ukf_filter.cpp  tool_test_show.cpp  ukf_filter.cpp
src/: Condensation.cpp  CoreAlgorithm.cpp  SerialPort.cpp  UKF.cpp  calibrate.cpp  readData.cpp  utils.cpp
